Thursday afternoon, finished the two column front end page

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
             <img id="belay-logo" src="belay-logo.jpg">
           </div>
           <h1>Belay</h1>
-          <h2>Chat Channels</h2>
+          <!-- <h3>Chat Channels</h3> -->
           <div class="button-container">
             <button class="signup">Signup</button> 
             <button class="login">Login</button>
@@ -34,8 +34,8 @@
               <!-- <img id="belay-logo" src="/static/belay-logo.jpeg"> -->
               <img id="belay-logo" src="belay-logo.jpg">
             </div>
-            <h1>Belay</h1>
-            <h2>Chat Channels</h2>
+            <h2>Belay</h2>
+            <!-- <h3>Chat Channels</h3> -->
         </div>
         <div class="header">
             Welcome to Your Profile, <span class="username" id="profile-username"></span>!
@@ -44,13 +44,13 @@
         <div class="auth container">
             <div class="alignedForm">
             <div class="inputs">
-                <label for="username">Enter New Username: </label>
+                <label for="username">Change Username: </label>
                 <input name="username" id="name-set" value="">
                 <button id="updateUser">update</button>
             </div>
             <br>
             <div class ="inputs">
-                <label for="password">Enter New Password: </label>
+                <label for="password">Change Password: </label>
                 <input type="password" name="password" id="pw-set" value="">
                 <button id="updatePassword">update</button>
             </div>
@@ -70,8 +70,8 @@
           <!-- <img id="belay-logo" src="/static/belay-logo.jpeg"> -->
           <img id="belay-logo" src="belay-logo.jpg">
         </div>
-        <h1>Belay</h1>
-        <h2>Chat Channels</h2>
+        <h2>Belay</h2>
+        <!-- <h3>Chat Channels</h3> -->
       </div>
       <div class="header">
         Enter Your Username and Password to Login:
